@@ -11,7 +11,6 @@ import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
-import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.layout.Pane;
 import javafx.scene.layout.Region;
@@ -124,11 +123,6 @@ public class ValidationMenuController implements GameModelListener {
         }
     }
 
-    @FXML
-    private void handleViewOptions() {
-        // TODO
-    }
-
     private void showError(String message) {
         errorLabel.setText(message);
         errorLabel.setVisible(true);
@@ -174,9 +168,9 @@ public class ValidationMenuController implements GameModelListener {
         }
 
         if (shipPane != null) {
-            if (shipPane.getChildren().size() > 0) {
+            if (!shipPane.getChildren().isEmpty()) {
                 try {
-                    Parent shipView = (Parent) shipPane.getChildren().get(0);
+                    Parent shipView = (Parent) shipPane.getChildren().getFirst();
                     if (shipView != null) {
                         try {
                             Pane shipPaneTyped = (Pane) shipView;
